--- a/sgx-nacl/SConstruct
+++ b/sgx-nacl/SConstruct
@@ -2330,6 +2330,22 @@ def MakeTrustedLinuxEnv(platform=None):
   usgx_env.Prepend(CCFLAGS=['-fPIE'])
 
   # -c -std=gnu99 -Wdeclaration-after-statement -Wstrict-prototypes -I/opt/intel/sgxsdk/include -fPIE -m64 -Wall -Wextra -Wno-long-long -Wswitch-enum -Wsign-compare -Wundef -fdiagnostics-show-option -fvisibility=hidden -fstack-protector -Werror -Wno-variadic-macros --param ssp-buffer-size=4 -I/opt/intel/sgxsdk/include -D_FORTIFY_SOURCE=2 -D_POSIX_C_SOURCE=199506 -D_XOPEN_SOURCE=600 -D_GNU_SOURCE=1 -D_LARGEFILE64_SOURCE=1 -D__STDC_LIMIT_MACROS=1 -D__STDC_FORMAT_MACROS=1
+  common_cflags = [
+          # '-Werror', #'-Wno-variadic-macros', 
+          '-DUSGX',
+          '-g',
+          '-fPIC','-Wall', '-Wextra', '-Wpointer-arith', '-Wreturn-type', '-Waddress', '-Wsequence-point',
+          #'-Wformat-security', '-Wmissing-include-dirs', '-Wfloat-equal', '-Wundef', '-Wshadow', '-Wcast-align',
+          #'-Wcast-qual', '-Wconversion', '-Wredundant-decls', '-fPIC', 
+          #'-Wno-attributes', 
+          '-I/opt/intel/sgxsdk/include',
+          # '-fpermissive',
+          # '-I/home/syseok/wolfssl',
+          # '-I/home/syseok/wolfssl/wolfcrypt',
+           #'-DPAVE'
+          #'-I/home/mkpark/pave/depot_tools'
+          ]
+
 
 (linux_debug_env, linux_optimized_env) = \
     GenerateOptimizationLevels(MakeTrustedLinuxEnv())
