--- a/sgx-nacl/SConstruct
+++ b/sgx-nacl/SConstruct
@@ -888,6 +888,8 @@ DeclareBit('build_x86_64', 'Building binaries for the x86-64 architecture',
            exclusive_groups='build_arch')
 DeclareBit('build_mips32', 'Building binaries for the MIPS architecture',
            exclusive_groups='build_arch')
+DeclareBit('build_arm', 'Building binaries for the ARM architecture',
+           exclusive_groups='build_arch')
 
 # Shorthand for either the 32 or 64 bit version of x86.
 DeclareBit('build_x86', 'Building binaries for the x86 architecture')
@@ -898,6 +900,7 @@ DeclareBit('usgx', 'Building binaries for the x86 Untrusted SGX architecture')
 
 
 def MakeArchSpecificEnv(platform=None):
+  
   env = pre_base_env.Clone()
   if platform is None:
     platform = GetTargetPlatform()
@@ -907,6 +910,7 @@ def MakeArchSpecificEnv(platform=None):
     subarch = '64'
   else:
     subarch = '32'
+  
 
   env.Replace(BUILD_FULLARCH=platform)
   env.Replace(BUILD_ARCHITECTURE=arch)
@@ -914,6 +918,7 @@ def MakeArchSpecificEnv(platform=None):
   env.Replace(TARGET_FULLARCH=platform)
   env.Replace(TARGET_ARCHITECTURE=arch)
   env.Replace(TARGET_SUBARCH=subarch)
+
 
   env.SetBits('build_%s' % platform.replace('-', '_'))
 
@@ -936,6 +941,7 @@ pre_base_env.AddMethod(lambda self: ARGUMENTS.get('running_on_valgrind'),
                        'IsRunningUnderValgrind')
 
 DeclareBit('with_leakcheck', 'Running under Valgrind leak checker')
+
 
 def RunningUnderLeakCheck():
   run_under = ARGUMENTS.get('run_under')
