--- a/native_client/SConstruct
+++ b/native_client/SConstruct
@@ -2738,135 +2738,6 @@ def MakeGenericLinuxEnv(platform=None):
 
   return linux_env
 
-def MakeUntrustedSgxEnv(platform=None):
-  usgx_env = MakeGenericLinuxEnv(platform).Clone(
-      BUILD_TYPE = 'usgx-linux',
-      BUILD_TYPE_DESCRIPTION = 'Linux Untrusted SGX build',
-      tools = ['target_platform_linux'],
-      #tools = ['target_platform_usgx'],
-      LINK = '$CXX',
-  )
- 
-  '''
-  usgx_env.Prepend(
-      CPPDEFINES = [['_POSIX_C_SOURCE', '199506'],
-                    ['_XOPEN_SOURCE', '600'],
-                    ['_GNU_SOURCE', '1'],
-                    ['_LARGEFILE64_SOURCE', '1'],
-                    ],
-      LIBS = ['rt'],
-      )
-
-  if usgx_env.Bit('build_x86_32'):
-    usgx_env.Prepend(
-        CCFLAGS = ['-m32'],
-        LINKFLAGS = ['-m32'],
-        )
-  elif usgx_env.Bit('build_x86_64'):
-    usgx_env.Prepend(
-        CCFLAGS = ['-m64'],
-        LINKFLAGS = ['-m64'],
-        )
-  else:
-    Banner('Strange platform: %s' % GetTargetPlatform())
-  '''
-  usgx_env.Replace(BUILD_SCONSCRIPTS = [
-      'build/package_version/build.scons',
-      'pynacl/build.scons',
-      'src/nonsfi/irt/build.scons',
-      'src/nonsfi/loader/build.scons',
-      'src/shared/gio/build.scons',
-      'src/shared/imc/build.scons',
-      'src/shared/platform/build.scons',
-      'src/third_party/gtest/build.scons',
-      'src/trusted/cpu_features/build.scons',
-      'src/trusted/debug_stub/build.scons',
-      'src/trusted/desc/build.scons',
-      'src/trusted/fault_injection/build.scons',
-      'src/trusted/interval_multiset/build.scons',
-      'src/trusted/nacl_base/build.scons',
-      'src/trusted/perf_counter/build.scons',
-      'src/trusted/platform_qualify/build.scons',
-      'src/trusted/seccomp_bpf/build.scons',
-      'src/trusted/service_runtime/build.scons',
-      'src/trusted/validator/build.scons',
-      'src/trusted/validator/driver/build.scons',
-      'src/trusted/validator_arm/build.scons',
-      'src/trusted/validator_ragel/build.scons',
-      'src/trusted/validator_x86/build.scons',
-
-  ])
-
-  usgx_env.Replace(
-      NACL_BUILD_FAMILY = 'USGX',
-  )
-
-  usgx_env.SetBits('usgx')
-  usgx_env.Append(
-          CCFLAGS=['-DUSGX'])
-  '''
-  usgx_env.Prepend(CPPDEFINES=[['-D_FORTIFY_SOURCE', '2']])
-  
-  usgx_env.Replace(COMMON_LINKFLAGS=usgx_env['LINKFLAGS'],
-                    LINKFLAGS=['$COMMON_LINKFLAGS'])
-  usgx_env.FilterOut(SHLINKFLAGS=['$LINKFLAGS'])
-  usgx_env.Prepend(SHLINKFLAGS=['$COMMON_LINKFLAGS'])
-  usgx_env.Prepend(COMMON_LINKFLAGS=['-Wl,-z,relro',
-                                      '-Wl,-z,now',
-                                      '-Wl,-z,noexecstack',
-                                      '-Wl,--no-undefined -nostdlib -nodefaultlibs -nostartfiles',
-                                    '-Wl,-Bsymbolic',
-                                    '-Wl,--export-dynamic',
-                                    '-Wl,--defsym,__ImageBase=0', 
-                                    '-Wl,--gc-sections', 
-])
-  usgx_env.Prepend(LINKFLAGS=['-pie'])
-  usgx_env.Prepend(CCFLAGS=['-fPIE'])
-
-  common_cflags = [
-          '-DUSGX',
-          '-g',
-          '-fPIC',
-          '-Wall', '-Wextra', '-Wpointer-arith', '-Wreturn-type', '-Waddress', '-Wsequence-point',
-          '-Wno-long-long', '-Wswitch-enum', '-Wsign-compare', '-Wundef', #'-Werror-implicit-function-declaration',
-          #'-Wstrict-prototypes', '-Wstrict-prototypes', '-ffunction-sections', '-fdata-sections',  
-          '-I/opt/intel/sgxsdk/include',
-          '-D__linux__',
-          '-DCRYPTO_USE_MBEDTLS',
-          '-DDEBUG',
-          '-DIN_PAL',
-          '-DIN_ENCLAVE',
-          '-DWOLFSSL_SGX_ATTESTATION',
-          '-DWOLFSSL_ALWAYS_VERIFY_CB',
-          '-DKEEP_PEER_CERT',
-          '-DNO_INLINE', 
-          '-fno-builtin',
-          '-fno-stack-protector',
-          '-fdiagnostics-show-option',
-          '-fvisibility=hidden',
-          ] + ['--param', 'ssp-buffer-size=4', 
-          ] + ['-Werror', '-pedantic', '-Wno-variadic-macros']
-          # TODO(hmlee): To avoid required build flags missing error during compilation
-
-  usgx_env.Replace(
-          CCFLAGS=common_cflags+ ['-Wno-covered-switch-default', '-Wno-c++11-extensions'],
-          ASFLAGS=common_cflags,
-          )
-  usgx_env.Append(
-    _LIBFLAGS = [ 
-       '-Lscons-out/sgx-linux-x86-64/lib',
-        '-L/opt/intel/sgxsdk/lib64/', '-lsgx_urts', '-lpthread', '-lsgx_uae_service'
-        '-lrt', 'lnacl_error_code', '-lsel', '-lenv_cleanser', '-lnrd_xfer',
-        '-lnacl_perf_counter', '-lnacl_base', '-lnacl_fault_inject', 
-        '-lnacl_interval', '-lvalidation_cache', '-lvalidators', '-ldfa_validate_caller_x86_64',
-        '-lnccopy_x86_64', '-lplatform', '-ldebug_stub', '-lgen', #'-lsgxlib', '-lwolflib', 
-        ])
-  '''
-  usgx_env.AddMethod(SDKInstallBin)
-  AddDualLibrary(usgx_env)
-  environment_list.append(usgx_env)
-
-  return usgx_env
 
 
 def MakeSgxEnv():
@@ -2903,8 +2774,14 @@ def MakeSgxEnv():
       '${DESTINATION_ROOT}/${BUILD_TYPE}-${BUILD_TARGET_NAME}')
   
   sgx_env.Replace(BUILD_SCONSCRIPTS = [
-      'src/shared/platform/build.scons',
+      'build/package_version/build.scons',
+      'pynacl/build.scons',
+      'src/nonsfi/irt/build.scons',
+      'src/nonsfi/loader/build.scons',
       'src/shared/gio/build.scons',
+      # -----------------------
+      'src/shared/imc/build.scons',
+      'src/shared/platform/build.scons',
       'src/third_party/gtest/build.scons',
       'src/trusted/debug_stub/build.scons',
       'src/trusted/desc/build.scons',
@@ -2943,13 +2820,6 @@ def MakeSgxEnv():
           '-g',
           '-D__linux__',
           '-DSGX',
-	  '-DCRYPTO_USE_MBEDTLS', 
-	  '-DDEBUG',
-          '-DIN_PAL',
-	  '-DIN_ENCLAVE',
-          '-DWOLFSSL_SGX_ATTESTATION', 
-	  '-DWOLFSSL_ALWAYS_VERIFY_CB',
-          '-DKEEP_PEER_CERT',
  	  '-DNO_INLINE',
           '-fno-builtin',
           '-fno-stack-protector', # show options to hide warning
@@ -2958,8 +2828,9 @@ def MakeSgxEnv():
   ] + ['--param', 'ssp-buffer-size=4']
 
   sgx_include = [
-          '-I${SGX_SDK}/include/',
-          '-I/home/crhamm/nacl',
+          #'-I${SGX_SDK}/include/',
+          # TODO (crhamm)
+          # '-I/home/crhamm/nacl',
           '-Wno-long-long', 
           '-Wswitch-enum', 
           '-Wsign-compare', 
@@ -2970,10 +2841,11 @@ def MakeSgxEnv():
     CCFLAGS = common_flags + [
         ] + sgx_include, 
     CFLAGS = [
-        '-std=c11',
+        # '-nostdinc'
+        # '-std=c11',
         ] + sgx_include,
     CXXFLAGS = [
-        '-std=c++11',
+        #'-std=c++11',
         ],
     )
 
@@ -3039,11 +2911,8 @@ def MakeTrustedLinuxEnv(platform=None):
     GenerateOptimizationLevels(MakeTrustedLinuxEnv())
 
 sgx_env = MakeSgxEnv()
-'''
-usgx_env = MakeUntrustedSgxEnv()
-SetUpClang(usgx_env)
-usgx_env.Replace(LINK = '$CXX')
-'''
+
+# TODO(mkpark): clean later
 usgx_env = linux_optimized_env.Clone(
       BUILD_TYPE = 'usgx-linux',
       BUILD_TYPE_DESCRIPTION = 'Linux Untrusted SGX build',
@@ -3080,8 +2949,9 @@ usgx_env.Replace(
 )
 
 usgx_env.SetBits('usgx')
+# TODO(mkpark) : change the root path
 usgx_env.Append(
-      CCFLAGS=['-DUSGX'])
+      CCFLAGS=['-DUSGX', '-I/home/hmlee/linux-sgx-driver'])
 
 usgx_env.AddMethod(SDKInstallBin)
 AddDualLibrary(usgx_env)
