--- a/native_client/SConstruct
+++ b/native_client/SConstruct
@@ -2777,25 +2777,26 @@ def MakeSgxEnv():
       'build/package_version/build.scons',
       'pynacl/build.scons',
       'src/trusted/xcall/build.scons',
-      'src/nonsfi/irt/build.scons',
-      'src/nonsfi/loader/build.scons',
-      'src/shared/gio/build.scons',
-      'src/shared/imc/build.scons',
-      'src/shared/platform/build.scons',
-      'src/third_party/gtest/build.scons',
-      'src/trusted/cpu_features/build.scons',
-      'src/trusted/debug_stub/build.scons',
-      'src/trusted/desc/build.scons',
-      'src/trusted/fault_injection/build.scons',
-      'src/trusted/interval_multiset/build.scons',
-      'src/trusted/nacl_base/build.scons',
-      'src/trusted/perf_counter/build.scons',
-      'src/trusted/validator/build.scons', 
-      'src/trusted/validator/driver/build.scons',
-      'src/trusted/validator_ragel/build.scons',
-      'src/trusted/validator_x86/build.scons',
-      'src/trusted/platform_qualify/build.scons',
-      'src/trusted/service_runtime/build.scons',
+      #'src/nonsfi/irt/build.scons',
+      #'src/nonsfi/loader/build.scons',
+      #'src/shared/gio/build.scons',
+      #'src/shared/imc/build.scons',
+      #'src/shared/platform/build.scons',
+      #'src/third_party/gtest/build.scons',
+      #'src/trusted/cpu_features/build.scons',
+      #'src/trusted/debug_stub/build.scons',
+      #'src/trusted/desc/build.scons',
+      #'src/trusted/fault_injection/build.scons',
+      #'src/trusted/interval_multiset/build.scons',
+      #'src/trusted/nacl_base/build.scons',
+      #'src/trusted/perf_counter/build.scons',
+      #'src/trusted/validator/build.scons', 
+      #'src/trusted/validator/driver/build.scons',
+      #'src/trusted/validator_ragel/build.scons',
+      #'src/trusted/validator_x86/build.scons',
+      #'src/trusted/platform_qualify/build.scons',
+      #'src/trusted/service_runtime/build.scons',
+      
       #'src/trusted/wolfssl/build.scons',
       #'src/trusted/stdlib/build.scons',
   ])
@@ -2842,7 +2843,7 @@ def MakeSgxEnv():
     CCFLAGS = common_flags + [
         ] + sgx_include, 
     CFLAGS = [
-        # '-nostdinc'
+        #'-nostdinc'
         '-std=c99',
         ] + sgx_include,
     CXXFLAGS = [
