--- a/native_client/SConstruct
+++ b/native_client/SConstruct
@@ -2777,14 +2777,15 @@ def MakeSgxEnv():
       'build/package_version/build.scons',
       'pynacl/build.scons',
       'src/trusted/xcall/build.scons',
-      #'src/nonsfi/irt/build.scons',
-      #'src/nonsfi/loader/build.scons',
+      ##'src/nonsfi/irt/build.scons',
+      ##'src/nonsfi/loader/build.scons',
       #'src/shared/gio/build.scons',
-      #'src/shared/imc/build.scons',
+      ##'src/shared/imc/build.scons',
       #'src/shared/platform/build.scons',
-      #'src/third_party/gtest/build.scons',
+      ##'src/third_party/gtest/build.scons',
       #'src/trusted/cpu_features/build.scons',
-      #'src/trusted/debug_stub/build.scons',
+      # TODO(mkpark) I'm not sure the below
+      ##'src/trusted/debug_stub/build.scons',
       #'src/trusted/desc/build.scons',
       #'src/trusted/fault_injection/build.scons',
       #'src/trusted/interval_multiset/build.scons',
