--- a/native_client/SConstruct
+++ b/native_client/SConstruct
@@ -2779,11 +2779,11 @@ def MakeSgxEnv():
       'src/trusted/xcall/build.scons',
       ##'src/nonsfi/irt/build.scons',
       ##'src/nonsfi/loader/build.scons',
-      #'src/shared/gio/build.scons',
+      'src/shared/gio/build.scons',
       ##'src/shared/imc/build.scons',
-      #'src/shared/platform/build.scons',
+      'src/shared/platform/build.scons',
       ##'src/third_party/gtest/build.scons',
-      #'src/trusted/cpu_features/build.scons',
+      'src/trusted/cpu_features/build.scons',
       # TODO(mkpark) I'm not sure the below
       ##'src/trusted/debug_stub/build.scons',
       #'src/trusted/desc/build.scons',
@@ -2848,7 +2848,7 @@ def MakeSgxEnv():
         '-std=c99',
         ] + sgx_include,
     CXXFLAGS = [
-        '-std=c++99',
+        '-std=c++98',
         ],
     )
 
